ipc/ipdl/test/ipdl/ok/plugin.ipdl
intr protocol plugin {
child:
    async __delete__();

};
