ipc/ipdl/test/ipdl/error/rpcParentToChild.ipdl
intr protocol rpcParentToChild {

    // can't declare rpc parent-to-child messages
child: rpc Msg();

};
